--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,8 @@
-<p>Welcome <%= @email %>!</p>
+<!-- app/views/devise/mailer/confirmation_instructions.html.erb -->
+<p>Welcome! Confirm your account by clicking the link below:</p>
 
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>
+  <a href="<%= "#{ENV.fetch("FRONTEND_ORIGIN", "https://localhost:5173")}/confirm?token=#{@token}" %>">
+    Confirm my account
+  </a>
+</p>
